# hotspotter

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Dockerfile  Dockerfile.slim  MANIFEST.in  Makefile  README.md  current-test-strategy.md  current-testing-work.md  deeseek-wbia-parity.md  divergence_theories.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  parity.md  wbia-final-parity.md  wbia-oracle-recording.md
docs/_archive/: hotspotter-parity-discrepancies.md  parity-analysis.md  wbia-final-parity.md  wbia-pipeline-differences.md
docs/decisions/: 0001-package-structure.md  0002-pydantic-config.md  0003-feature-extraction.md  0004-knn-backend.md  0005-stateless-pipeline.md  0006-submodule-deps.md
docs/development/: coco-api-contract.md  devlog.md  (+12 more)
scripts/: compare_50_batch.py  compare_to_wbia.py  create_batch_100.py  create_batch_50.py  create_coco_batch.py  debug_sv_drops.py  deep_diagnose.py  deep_sv_test.py  devlog.py  diagnose_parity.py  evaluate_groundtruth.py  prepare_wildlife_dataset.py  ransac_experiment.py  run_fixture.py  run_parity.py  run_wbia_on_batch50.py  sv_byte_dump.py  sver_check.py  sver_crossbinary.py  sver_crosscheck.py  trace_fm_divergence.py  weight_debug.py
sidecar/: api.py
tests/: generate_goldens.py  test_chip.py  test_config.py  test_data.py  test_deterministic_replay.py  test_features.py  test_golden_replay.py  test_knn.py  test_name_scoring.py  test_parity_results.py  test_pipeline.py  test_properties.py  test_scoring.py  test_spatial.py  test_sv_parity.py  test_trace.py  test_wbia_silver_parity.py
(+958 files in other folders)
